# CodeScan

./: .gitattributes  .gitignore  AGENT.md  CLAUDE.md  CodeScan.csproj  CodeScan.sln  Program.cs  README-KO.md  README.md  REG_EXPAND_SZ)  codescan.db
.run/: CodeScan Deploy.run.xml  CodeScan TUI.run.xml
Commands/: AskCommand.cs  GraphCommand.cs  GraphEditCommand.cs  GuiCommand.cs  ListCommand.cs  ProjectAddInfoCommand.cs  ProjectCommand.cs  ProjectDeleteCommand.cs  ProjectUpdateCommand.cs  ProjectsCommand.cs  SearchCommand.cs
Docs/: install-distribution-strategy.md
Home/: index.html
Models/: CommentBlock.cs  FileEntry.cs  MarkdownDoc.cs  MethodEntry.cs
Prompt/: 00-First.md  01-LLM-Injection.md  02-CLI-CRUD.md  03-CLI-Update.md  05-TestForSampleProject.md  06-GRAPHCLI-FOR-LLM.md  07-LLMChat.md  08-NemoNano.md
Script/: deploy-linux.sh  deploy-win-aot.ps1  deploy-win.ps1  install-win.ps1  install.sh
Services/: AppPaths.cs  CommentExtractor.cs  DirectoryScanner.cs  FileResultStore.cs  GitBlameService.cs  GitLogSearchService.cs  GraphModels.cs  IResultStore.cs  MarkdownAnalyzer.cs  ProjectDocFinder.cs  SourceAnalyzer.cs  SourceGraphAnalyzer.cs  SourceUpdateService.cs  SqliteStore.cs  TreeFormatter.cs
TestSample/: README.md
TestSample/cpp/: .gitignore  CMakeLists.txt  Dockerfile
TestSample/cpp/src/: Person.cpp  Person.h  World.cpp  World.h  main.cpp
TestSample/cpp/src/speakers/: EnSpeaker.cpp  EnSpeaker.h  JaSpeaker.cpp  JaSpeaker.h  KoSpeaker.cpp  KoSpeaker.h
Tests/: CodeScan.Tests.csproj  CommentExtractorTests.cs  GraphCurationTests.cs  (+6 more)
Tui/: TuiApp.cs  (+1 more)
(+262 files in other folders)
